<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/layout_padding"
    tools:context=".data_collection.SexActivity">
    <TextView
        android:id="@+id/heading_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/heading_margin_top"
        android:background="@color/colorButtonText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading_text_size"
        android:textColor="@color/colorText"
        android:text="@string/sex_name"
        app:layout_constraintTop_toTopOf="parent"/>



                <TextView
                    android:id="@+id/man_sex_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/man_name"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/image_sex_margin_left"
                    android:layout_marginTop="@dimen/image_sex_margin_top"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heading_textView"/>
                <TextView
                    android:id="@+id/woman_sex_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/woman_name"
                    android:textAllCaps="true"
                    android:layout_marginEnd="@dimen/image_sex_margin_left"
                    android:layout_marginTop="@dimen/image_sex_margin_top"
                    android:textSize="@dimen/text_size"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/heading_textView"
                    app:layout_constraintEnd_toEndOf="parent"/>


            <ImageView
                android:id="@+id/man"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="onImageManClick"
                android:padding="3dp"
                android:src="@drawable/man"
                android:layout_marginStart="@dimen/image_sex_margin_left"
                android:layout_marginTop="@dimen/image_sex_margin_top"
                app:layout_constraintTop_toBottomOf="@id/man_sex_text_view"/>

            <ImageView
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onImageWomanClick"
                android:padding="3dp"
                android:src="@drawable/woman"
                android:layout_marginEnd="@dimen/image_sex_margin_left"
                android:layout_marginTop="@dimen/image_sex_margin_top"
                app:layout_constraintTop_toBottomOf="@id/woman_sex_text_view"
                app:layout_constraintEnd_toEndOf="parent"/>



    <Button

        android:id="@+id/OkButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/button_margin_top"
        android:onClick="onOKClick"
        android:text="@string/next_name"
        app:layout_constraintTop_toBottomOf="@id/woman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>