<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="horizontal"
    tools:context=".activitys.ReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading_textView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heading_size"
            android:text="@string/reminder_name"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStartWithNavigation="0dp"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorButtonText"
            android:textSize="@dimen/input_text_size"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat_remind"
            android:layout_width="@dimen/switch_width"
            android:layout_height="@dimen/heading_size"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/switch_margin_left"
            android:theme="@style/MySwitchStyle"
            android:checked="false"
            android:layout_marginEnd="@dimen/image_button_margin_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/timetable_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin_top"
        android:background="@color/colorButtonText"
        android:text="@string/timetable_name"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/time_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
    <EditText
        android:id="@+id/day_text_view"
        android:layout_width="@dimen/interval_size_width"
        android:layout_height="@dimen/interval_size_height"
        android:background="@color/colorButtonText"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:inputType="time"
        android:onClick="dayTimeEditTextClick"
        android:maxLength="5"
        android:layout_marginStart="@dimen/margin_heading_left"
        android:layout_marginTop="@dimen/margin_button_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetable_view" />
    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/heading_text_size"
        android:text="—"
        android:layout_marginTop="@dimen/margin_button_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_text_view"
        app:layout_constraintBottom_toTopOf="@+id/day_text_view"/>
    <EditText
        android:id="@+id/night_text_view"
        android:layout_width="@dimen/interval_size_width"
        android:layout_height="@dimen/interval_size_height"
        android:background="@color/colorButtonText"
        android:textColor="@color/colorText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:inputType="time"
        android:onClick="nightTimeEditTextClick"
        android:maxLength="5"
        android:layout_marginEnd="@dimen/margin_heading_left"
        android:layout_marginTop="@dimen/margin_button_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timetable_view" />

    <TextView
        android:id="@+id/interval_reminder_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/image_margin_top"
        android:background="@color/colorButtonText"
        android:text="@string/intervall_name"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/time_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_text_view" />



        <TextView
            android:id="@+id/every_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/image_button_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            android:text="каждые"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_min"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
            app:layout_constraintBottom_toTopOf="@+id/time_text_view"/>

        <EditText
            android:id="@+id/time_text_view"
            android:layout_width="@dimen/interval_size_width"
            android:layout_height="@dimen/interval_size_height"
            android:background="@color/colorButtonText"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/base_image_margin_top"
            android:textColor="@color/colorText"
            app:layout_constraintEnd_toStartOf="@+id/min_text_view"
            android:maxLength="3"
            android:onClick="editTextClick"
            app:layout_constraintStart_toEndOf="@+id/every_text_view"
            app:layout_constraintTop_toBottomOf="@+id/interval_reminder_view" />

        <TextView
            android:id="@+id/min_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="мин"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_min"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/image_button_margin_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
            app:layout_constraintBottom_toTopOf="@+id/time_text_view"/>


        <TextView
            android:id="@+id/constant_notifications_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constant_notifications_name"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_min1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/image_button_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_compat_constant_remind"
            app:layout_constraintBottom_toTopOf="@+id/switch_compat_constant_remind"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat_constant_remind"
            android:layout_width="@dimen/switch_width"
            android:layout_height="@dimen/heading_size"
            android:theme="@style/MySwitchStyle"
            android:checked="false"
            android:layout_marginTop="@dimen/image_button_margin_start"
            android:layout_marginEnd="@dimen/image_button_margin_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view" />

        <TextView
            android:id="@+id/melody_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/melody_name"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_min1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/image_button_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_compat_melody"
            app:layout_constraintBottom_toTopOf="@+id/switch_compat_melody"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat_melody"
            android:layout_width="@dimen/switch_width"
            android:layout_height="@dimen/heading_size"
            android:checked="false"
            android:theme="@style/MySwitchStyle"
            android:layout_marginTop="@dimen/base_image_margin_top"
            android:layout_marginEnd="@dimen/image_button_margin_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_compat_constant_remind"/>



        <TextView
            android:id="@+id/vibration_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration_name"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_min1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/image_button_margin_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_compat_vibration"
            app:layout_constraintBottom_toTopOf="@+id/switch_compat_vibration"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_compat_vibration"
            android:layout_width="@dimen/switch_width"
            android:layout_height="@dimen/heading_size"
            android:theme="@style/MySwitchStyle"
            android:checked="false"
            android:layout_marginTop="@dimen/base_image_margin_top"
            android:layout_marginEnd="@dimen/image_button_margin_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/melody_text_view"/>

    <TextView
        android:id="@+id/not_reminder_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/image_button_margin_start"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_min1"
        android:textStyle="bold"
        android:singleLine="false"
        app:layout_constraintBottom_toTopOf="@+id/switch_compat_not_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_compat_not_reminder" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_compat_not_reminder"
        android:layout_width="@dimen/switch_width"
        android:layout_height="@dimen/heading_size"
        android:theme="@style/MySwitchStyle"
        android:checked="false"
        android:layout_marginTop="@dimen/base_image_margin_top"
        android:layout_marginEnd="@dimen/image_button_margin_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_compat_vibration"/>

</androidx.constraintlayout.widget.ConstraintLayout>